# simbad2k

./: .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  planets.json  pyproject.toml  requirements.txt  simbad2k.py  test_simbad2k.py
.github/workflows/: build.yaml  canary_tests.yaml  publish-docker.yaml
docker/: nginx-app.conf  uwsgi.ini
docker/etc/: uwsgi.ini
docker/etc/nginx/sites-enabled/: nginx-app.conf
docker/etc/supervisor/conf.d/: supervisor-app.conf
helm-chart/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
helm-chart/templates/tests/: test-connection.yaml
simbad2k/: planets.json  simbad2k.py
simbad2k/tests/: canary_tests_simbad2k.py  test_simbad2k.py
tests/: test_simbad2k.py
