[project]
name = "simbad2k"
version = "1.5.0"
description = "This is a simple web service that returns catalog information for a variety of objects. It makes use of astroquery as well as some other services."
authors = [{name = "Observatory Control System Project", email = "<ocs@lco.global>"}]
homepage = "https://observatorycontrolsystem.github.io"
repository = "https://github.com/observatorycontrolsystem/simbad2k"
keywords = [
    "observations",
    "astronomy",
    "astrophysics",
    "cosmology",
    "science",
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.9.0,<3.11.0"
dependencies = [
    "astroquery >=0.4,<0.5",
    "astropy >=5,<6",
    "Flask >=2,<3",
    "Flask-Caching >=1.9,<1.10",
    "Flask-Cors >=3.0,<=3.1",
    "lcogt-logging >=0.3,<0.4",
    "MarkupSafe ==2.0.1",
    "gunicorn[gevent] ==19.9.0"
]

#[tool.poetry.dependencies]
#gunicorn = {version = "19.9.0", extras = ["gevent"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"